v0.0.1/modules/schema/pages/class/ASTMStandard.adoc
= `ASTMStandard`
:toclevels: 4


+++Standard published by ASTM (ASTM International).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ASTMStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ASTMStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/ASTMStandardEditionKind.adoc[`ASTMStandardEditionKind`]
| +++Edition of ASTM standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/ASTMStandardKind.adoc[`ASTMStandardKind`]
| +++ASTM standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of ASTM standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ASTMStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/ASTMStandardEditionKind.adoc[`ASTMStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++ASTM standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ASTMStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/ASTMStandardKind.adoc[`ASTMStandardKind`]


|===


