v1.1.0/modules/schema/pages/class/ASTMStandard.adoc
= `ASTMStandard`
:toclevels: 4


+++Standard published by ASTM (ASTM International).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ASTMStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ASTMStandard`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<standardEdition,`standardEdition`>>
//| [[slots_table.standardEdition]]<<standardEdition,`standardEdition`>>
| 0..1 +
xref::enumeration/ASTMStandardEditionKind.adoc[`ASTMStandardEditionKind`]
| +++Edition of ASTM standard.+++
| _n/a_

| <<standardNumber,`standardNumber`>>
//| [[slots_table.standardNumber]]<<standardNumber,`standardNumber`>>
| 0..1 +
xref::enumeration/ASTMStandardKind.adoc[`ASTMStandardKind`]
| +++ASTM standard number.+++
| _n/a_
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of ASTM standard.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ASTMStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/ASTMStandardEditionKind.adoc[`ASTMStandardEditionKind`]


|===

////
[.text-left]
--
<<slots_table.standardEdition,&#10548;>>
--
////


//[discrete]
[#standardNumber]
=== `standardNumber`
+++ASTM standard number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ASTMStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/ASTMStandardKind.adoc[`ASTMStandardKind`]


|===

////
[.text-left]
--
<<slots_table.standardNumber,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TestStandard.adoc[`TestStandard`] | xref::class/TestStandard.adoc#testStandardASTM[`testStandardASTM`]


|===

